# plantpal

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  TRANSLATION_GUIDE.md  generate_classes.py  main.py  package-lock.json  pyproject.toml  requirements.txt  style2.css
.github/workflows/: sync-to-hub.yml
client/: app.js  app.py  app.ts  index.html  results.py  sections.py  style2.css  styles.css  styles.py  to_do.txt
client/translations/: en.json  hi.json  mr.json
data/: to_do.txt
server/: analyzer.py  clean_data.py  config.py  dataset_tools.py  evaluate_model.py  langbly_client.py  model_config.py  test_model.py  to_do.txt  train_model.py  translations.py  translations_hi.py  translations_mr.py  treatments.py
server/models/: custom_cnn.keras  plantpal_model.keras
